# KGroundControl

./: .gitignore  CMakeLists.txt  CMakePresets.json  Deployment.txt  KGroundControl.pro  README.md  UDP_Defaults.txt  addtargetdialog.cpp  addtargetdialog.h  addtargetdialog.ui  cartography.cpp  connection_manager.cpp  connection_manager.h  default_ui_config.cpp  default_ui_config.h  generic_port.cpp  generic_port.h  keybinddialog.cpp  keybinddialog.h  keybinddialog.ui  kgroundcontrol.cpp  kgroundcontrol.h  kgroundcontrol.ui  mavlink_enum_types.cpp  mavlink_enum_types.h  mavlink_inspector.cpp  mavlink_inspector.h  mavlink_inspector.ui  mavlink_inspector_msg.ui  mavlink_manager.cpp  mavlink_manager.h  mocap.cpp  mocap.h  mocap_manager.cpp  mocap_manager.h  mocap_manager.ui  relaydialog.cpp  relaydialog.ui  serial_port.cpp  serial_port.h  (+11 more)
.github/workflows/: release.yml
cmake/: MavlinkGenerate.cmake  PackageDist.cmake  Timestamp.cmake  WriteAppRun.cmake  WriteControl.cmake  WriteDesktop.cmake
docs/: updates.json
docs/distribution/templates/: README.md
docs/distribution/templates/AppImage/: README.md
docs/distribution/templates/DEB/: README.md
docs/distribution/templates/Tarball/: README.md
include/: cartography.h  collapsible_group.h  connection_manager.h  create_3d_group_dialog.h  default_ui_config.h  fake_mocap_dialog.h  generic_port.h  joystick.h  joystick_manager.h  keybinddialog.h  kgroundcontrol.h  mavlink_enum_types.h  mavlink_inspector.h  mocap_manager.h  plot_canvas.h  plot_signal_registry.h  plotting_manager.h  relaydialog.h  remote_control_manager.h  sci_doublespinbox.h  serial_port.h  settings.h  signal_filters.h  threads.h  udp_port.h  update_manager.h
include/hardware_io/: connection_manager.h  generic_port.h  joystick.h  joystick_manager.h  serial_port.h  udp_port.h
include/logging/: log_manager.h
include/mavlink_communication/: keybinddialog.h  mavlink_enum_types.h  mavlink_inspector.h  remote_control_manager.h
include/mocap/: fake_mocap_dialog.h  mocap_manager.h
include/plot/: create_3d_group_dialog.h  plot_canvas.h  plot_signal_registry.h  plot_signal_ui_helpers.h  plotting_manager.h
libs/: CMakeLists.txt
libs/Mavlink/: CMakeLists.txt
libs/Mavlink/mavlink2/ASLUAV/: ASLUAV.h  mavlink.h  version.h
libs/Mavlink/mavlink2/AVSSUAS/: AVSSUAS.h  mavlink.h  version.h
libs/Mavlink/mavlink2/all/: all.h  mavlink.h  version.h
libs/Mavlink/mavlink2/ardupilotmega/: ardupilotmega.h  mavlink.h
libs/Mavlink/mavlink2/common/: common.h  mavlink.h
libs/Mavlink/mavlink2/csAirLink/: csAirLink.h  mavlink.h
libs/Mavlink/mavlink2/cubepilot/: cubepilot.h  mavlink.h
libs/Mavlink/mavlink2/development/: development.h  mavlink.h  version.h
libs/Mavlink/mavlink2/icarous/: icarous.h  mavlink.h
libs/Mavlink/mavlink2/minimal/: mavlink.h  minimal.h
libs/Mavlink/mavlink2/python_array_test/: mavlink.h  python_array_test.h  version.h
libs/Mavlink/mavlink2/standard/: mavlink.h  standard.h
libs/Mavlink/mavlink2/storm32/: mavlink.h  storm32.h  version.h
libs/Mavlink/mavlink2/test/: mavlink.h  test.h  version.h
libs/Mavlink/mavlink2/uAvionix/: mavlink.h  uAvionix.h
libs/Mavlink/mavlink2/ualberta/: mavlink.h  ualberta.h  version.h
libs/SDL/: CMakeLists.txt
libs/optitrack/: CMakeLists.txt
libs/optitrack/include/: optitrack.hpp
libs/optitrack/src/: optitrack.cpp
resources/Images/: Images.qrc
resources/Images/Logo/: KLogo.rc  KLogo.xcf  KLogo_256x256.xcf
resources/SDL/: SDL.qrc
src/: cartography.cpp  cartography.ui  collapsible_group.cpp  connection_manager.cpp  create_3d_group_dialog.cpp  create_3d_group_dialog.ui  default_ui_config.cpp  fake_mocap_dialog.cpp  joystick.cpp  joystick_manager.cpp  joystick_manager.ui  keybinddialog.cpp  kgroundcontrol.cpp  kgroundcontrol.ui  main.cpp  mavlink_inspector.cpp  mavlink_inspector.ui  mavlink_inspector_msg.ui  mocap_manager.cpp  mocap_manager.ui  plot_canvas.cpp  plot_signal_registry.cpp  plotting_manager.cpp  plotting_manager.ui  relaydialog.cpp  relaydialog.ui  remote_control_manager.cpp  serial_port.cpp  settings.cpp  signal_filters.cpp  threads.cpp  udp_port.cpp  update_manager.cpp
src/hardware_io/: connection_manager.cpp  joystick.cpp  joystick_manager.cpp  serial_port.cpp  udp_port.cpp
src/logging/: log_manager.cpp
src/mavlink_communication/: keybinddialog.cpp  mavlink_inspector.cpp  remote_control_manager.cpp
src/mocap/: fake_mocap_dialog.cpp  mocap_manager.cpp
src/plot/: create_3d_group_dialog.cpp  plot_canvas.cpp  plot_signal_registry.cpp  plot_signal_ui_helpers.cpp  plotting_manager.cpp
tools/: install_Qt.sh
tools/ubuntu/: install_Qt.sh
tools/windows/: install_Qt.ps1
ui/: create_3d_group_dialog.ui  fake_mocap_dialog.ui  joystick_manager.ui  keybinddialog.ui  kgroundcontrol.ui  mocap_manager.ui  plotting_manager.ui
